syntax = "proto3";

import "publickey.proto";

option java_package = "com.exonum.binding.cryptocurrency.transactions";
option java_outer_classname = "CreateWalletTxProtos";

message CreateWalletTx {
  PublicKey ownerPublicKey = 1;
}
